# crabsoup

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  README.md  README_internal.md  build_dist.sh  format_all.sh
crabsoup/: Cargo.toml  build.rs  format_lua.sh
crabsoup-lua/: Cargo.toml  README.md  build.rs
crabsoup-lua/examples/: test.rs
crabsoup-lua/src/: lib.rs  main.rs  wyhash.rs
crabsoup-lua/src/html/: detached_tree_sink.rs  is_document_tree_sink.rs  mod.rs  serialize.rs
crabsoup-lua/src/lua/: baselib.rs  htmllib.rs  ilua.lua  mod.rs  soupault_api.luau  soupault_html_api.luau  stdlib.rs  utils.rs
crabsoup-lua/src/lua/rt/: crabsoup_ext_api.luau  finalize.luau  ilua.lua  ilua_pretty.lua  ilua_repl.lua  lua25_stdlib.luau  lua5x_stdlib.luau  soupault_api.luau  soupault_html_api.luau
crabsoup-lua/src/lua/rt/global_env/: baselib.luau  ilua_pretty.lua  ilua_repl.lua
crabsoup-lua/src/lua/rt/plugin_env/: legacy_api.luau  lua25_stdlib.luau
crabsoup-lua/src/lua/rt/shared_env/: crabsoup_ext_api.luau  html_api.luau  lua5x_stdlib.luau  soupault_api.luau
crabsoup-luau-sys/: Cargo.toml  LICENSE.md  README.md  build.rs
crabsoup-luau-sys/src/: lib.rs
crabsoup-mlua-analyze/: .clang-format  Cargo.toml  build.rs  download_luau.sh  luau
crabsoup-mlua-analyze/bindings/: bindings.cpp
crabsoup-mlua-analyze/examples/: test_analyze.rs
crabsoup-mlua-analyze/src/: lib.rs
crabsoup/lua/: init.luau
crabsoup/lua/app/: config.luau  crabsoup.luau  plugins.luau
crabsoup/lua/app/builtin_plugins/: common.luau
crabsoup/lua/app/crabsoup/: config.luau  default_config.toml  init.luau  pages.luau  plugins.luau  scheduler.luau  template.luau  utils.luau  widget.luau
crabsoup/lua/app/plugins/: simple.luau  toc.luau
crabsoup/lua/app/widget/: basic.luau  toc.luau
crabsoup/lua/apps/crabsoup/: crabsoup.luau
crabsoup/lua/defs/: ctx_defs.luau  ctx_plugin.luau  ctx_standalone.luau  defs_legacy_alias.d_lua  defs_plugin.d_lua  defs_plugin_globals.d_lua  defs_shared.d_lua  defs_standalone.d_lua  standalone_ctx.d_lua
crabsoup/lua/env/global/: base.luau
crabsoup/lua/env/plugin/: soupault_deprecated.luau
crabsoup/lua/env/shared_env/: api.luau  api_native.luau  html.luau  require.luau  requirelib.luau
crabsoup/lua/env/shared_table/: ilua_pretty.lua  ilua_repl.lua
crabsoup/lua/envs/global/: baselib.luau
crabsoup/lua/envs/plugin/: legacy_api.luau  legacy_htmllib.luau  lua25_stdlib.luau  luaml_stdlib.luau
crabsoup/lua/envs/shared/: 0_lua5x_stdlib.luau  1_htmllib.luau  1_soupault_api.luau  2_ilua_pretty.lua  2_ilua_repl.lua
crabsoup/lua/envs/shared_env/: htmllib.luau  requirelib.luau  soupault_api.luau
crabsoup/lua/envs/shared_table/: ilua_pretty.lua  ilua_repl.lua
crabsoup/lua/rt/: finalize.luau
crabsoup/lua/rt/global_env/: baselib.luau  htmllib.luau  ilua_pretty.lua  ilua_repl.lua
crabsoup/lua/rt/plugin_env/: legacy_api.luau  legacy_htmllib.luau
crabsoup/lua/rt/shared_env/: html_api.luau  htmllib.luau  ilua_pretty.lua  lua5x_stdlib.luau  soupault_api.luau
crabsoup/src/: cli_impl.rs  ctx.rs  lib.rs  main.rs  paths.rs
crabsoup/src/ctx/: analyzelib.rs  baselib.rs  codeclib.rs  datelib.rs  digestlib.rs  htmllib.rs  mod.rs  processlib.rs  regexlib.rs  stringlib.rs  syslib.rs
crabsoup/src/html/: extract_text.rs  is_document.rs  mod.rs
crabsoup/src/libs/: analyze.rs  base.rs  codec.rs  html.rs  log.rs  mod.rs  regex.rs  string.rs  sys.rs
crabsoup/src/lua/: baselib.rs  crabsoup.luau  htmllib.rs  mod.rs  syslib.rs  utils.rs
docs/: Differences from Soupault.md  Plugin API.md
