[workspace]
members = [
    "crabsoup",
    "crabsoup-kuchikiki",
    "crabsoup-lua",
]
resolver = "2"

[profile.dev]
opt-level = 's'

[profile.release]
opt-level = 3
lto = true

[workspace.dependencies]
anyhow = "1.0"
glob = "0.3"
mlua = { version = "0.9", features = ["luau-jit"] }
rustyline = { version = "14.0", default-features = false }
tracing = "0.1"
wyrand = { version = "0.2", features = ["wyhash"] }

# Internal libraries
crabsoup-kuchikiki = { version = "0.8.2-crabsoup", path = "crabsoup-kuchikiki" }
crabsoup-lua = { version = "0.1.0", path = "crabsoup-lua" }