[workspace]
members = [
    "crabsoup",
    "crabsoup-kuchikiki",
    "crabsoup-mlua-analyze",
]
resolver = "2"

[profile.dev]
opt-level = 's'

[profile.release]
opt-level = 3
lto = true

[workspace.dependencies]
anyhow = "1.0"
glob = "0.3"
mlua = { version = "0.9", features = ["luau-jit", "serialize"] }
