[workspace]
members = [
    "crabsoup",
    "crabsoup-kuchikiki",
    "crabsoup-luau-sys",
    "crabsoup-mlua-analyze",
]
resolver = "2"

[profile.dev]
opt-level = 's'

[profile.release]
opt-level = 3
lto = true

[workspace.dependencies]
anyhow = "1.0"
glob = "0.3"
mlua = { version = "0.9", features = ["luau-jit", "serialize"] }

# Internal dependencies
crabsoup-kuchikiki = { version = "0.8.2-crabsoup", path = "crabsoup-kuchikiki" }
crabsoup-luau-sys = { version = "0.1.0", path = "crabsoup-luau-sys" }
crabsoup-mlua-analyze = { version = "0.1.0", path = "crabsoup-mlua-analyze" }
