[package]
name = "crabsoup-mlua-analyze"
version = "0.1.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "Internal crate for crabsoup (for now)."
repository = "https://github.com/Lymia/crabsoup"

include = [
    "bindings",
    "luau/Analysis/include",
    "luau/Ast/include",
    "luau/Common/include",
    "luau/Config/include",
    "src",
    "build.rs",
    "Cargo.toml",
    "LICENSE.md",
    "README.md",
]

license = "Apache-2.0"

[dependencies]
crabsoup-luau-sys = { workspace = true }

[build-dependencies]
cc = { version = "1.1", features = ["parallel"] }
