[package]
name = "crabsoup"
version = "0.1.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "A Rust re-implementation of soupault."

repository = "https://github.com/Lymia/crabsoup"
readme = "README.md"

license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
encoding_rs = { version = "0.8.34", features = ["fast-legacy-encode"] }
glob = "0.3"
html5ever = "0.27"
mlua = { version = "0.9", features = ["luau-jit"] }
rustyline = { version = "14.0", default-features = false }
tracing = "0.1"
wyrand = { version = "0.2", features = ["wyhash"] }

# Internal libraries
crabsoup-kuchikiki = { version = "0.8.2-crabsoup", path = "../crabsoup-kuchikiki" }

[build-dependencies]
anyhow = "1.0"
glob = "0.3"
mlua = { version = "0.9", features = ["luau-jit"] }
