[package]
name = "crabsoup"
version = "0.1.0"
authors = ["Lymia Kanokawa <lymia@lymia.moe>"]
edition = "2021"

description = "A Rust re-implementation of soupault."

repository = "https://github.com/Lymia/crabsoup"
readme = "README.md"

license = "Apache-2.0"

[dependencies]
base64 = "0.22.1"
chrono = "0.4"
chrono-tz = { version = "0.9", features = ["case-insensitive"] }
clap = { version = "4.5", features = ["derive"] }
encoding_rs = { version = "0.8.34", features = ["fast-legacy-encode"] }
html5ever = "0.27"
minijinja = "2.1"
parking_lot = "0.12"
regex = "1.10"
rustyline = { version = "14.0", default-features = false }
tokio = { version = "1.39", features = ["io-util", "process", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"
wyrand = { version = "0.2", features = ["wyhash"] }

# Codecs
csv = "1.3"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Cryptography
digest = "0.10"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
blake2 = "0.10"

# Low-usage crates
tidier = "=0.5.2"

# Workspace dependencies
anyhow = { workspace = true }
glob = { workspace = true }
mlua = { workspace = true }

# Internal libraries
crabsoup-kuchikiki = { version = "0.8.2-crabsoup", path = "../crabsoup-kuchikiki" }
crabsoup-mlua-analyze = { version = "0.1.0", path = "../crabsoup-mlua-analyze" }

[build-dependencies]
anyhow = { workspace = true }
glob = { workspace = true }
mlua = { workspace = true }
